# sora-mlir

./: .clangd  .gitmodules  CMakeLists.txt  README  build.sh  build_llvm.sh  build_mlir.sh  env_setup.sh  envsetup.sh
include/: CMakeLists.txt
include/sora_mlir/: InitAll.h
include/sora_mlir-c/: Dialects.h  RegisterEverything.h
lib/: CMakeLists.txt  InitAll.cpp
lib/CAPI/: CMakeLists.txt  Dialects.cpp  RegisterEverything.cpp
manuals/: help.txt  mlir-opt.txt  mlir-translate.txt
python/: CMakeLists.txt  Llama2.py  test_mlir.py
python/examples/: minimal_grapgh.py
python/sora_mlir/: RegisterEverything.cpp
python/soracc_legacy/: .gitignore  .gitlab-ci.yml  .gitmessage  Dockerfile  _cmodel_test.py  _misc_lower.py  compile_MLPBlock.py  compile_STDiT3.py  compile_STDiT3Block.py  create_misc_case.sh  docker_build.sh  genHBMPattens.py  generate_case.py  generate_case_real.py  generate_case_simple.py  generate_fusion_case.py  generate_mm_case.py  generate_mm_case_real.py  generate_pvpu_case_real.py  get_STDiTBlock_mlir.py  inst_asm.py  profiling_inst.py  profiling_inst.sh  quant_convert.sh  requirements.txt  simple_compile.py  test.py  test_mlir.py
python/test/: MLIRGenerator.py  mlirgen.py  test_mlir.py
python/transform/: BaseConverter.py  MLIRAdaptor.py  MLIRGenerator.py  SoraLegacyConverter.py
tmp/: merge.mlir  merge1.mlir  merge2.mlir  merge3.mlir  origin.mlir
tmp/softmax/: graph.json
tools/: CMakeLists.txt
tools/mlir-practice/: CMakeLists.txt  mlir-practice.cpp
tools/sorac-mlirgen/: CMakeLists.txt  sorac-mlirgen.cpp
tools/sorac-opt/: sorac-opt.cpp  (+1 more)
(+81 files in other folders)
